--- a/TaskPlannerWeb/tasks.json
+++ b/TaskPlannerWeb/tasks.json
@@ -54,5 +54,12 @@
     "Deadline": "2025-02-15T00:00:00",
     "Status": "In Progress",
     "UserEmail": "pasha1@gmail.com"
+  },
+  {
+    "Title": "Gra",
+    "Description": "Zagra\u0107 w PayDay2 z Grze\u015Bkiem o 17:30",
+    "Deadline": "2025-02-01T00:00:00",
+    "Status": "In Progress",
+    "UserEmail": "motaigrok81@gmail.com"
   }
 ]
